--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "penny-pinchers",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/clueking1/Penny-Pinchers#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "express-handlebars": "^3.1.0"
   }
 }
