--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/clueking1/Penny-Pinchers#readme",
   "dependencies": {
-    "express-handlebars": "^3.1.0"
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mysql": "^2.18.1"
   }
 }
