--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.18.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
